# autoswarm-office

./: .enclii.yml  .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierignore  CLAUDE.md  Makefile  PRD.md  README.md  commitlint.config.js  llms-full.txt  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-enclii.yml  lint.yml
apps/admin/: next.config.js  package.json  tailwind.config.ts
apps/admin/src/: middleware.ts
apps/admin/src/app/: globals.css  layout.tsx  page.tsx
apps/colyseus/: package.json  tsconfig.json
apps/colyseus/src/: index.ts
apps/colyseus/src/__tests__/: agent-sync.test.ts  chat.test.ts  interaction.test.ts  movement.test.ts  multiplayer.test.ts
apps/gateway/: package.json
apps/gateway/src/: HEARTBEAT.md  MEMORY.md  crm-scraper.ts  heartbeat.ts  index.ts  memory.ts
apps/nexus-api/: pyproject.toml
apps/nexus-api/alembic/: env.py
apps/nexus-api/nexus_api/: auth.py  billing_client.py  config.py  logging_config.py  main.py  models.py  tenant.py
apps/nexus-api/src/: auth.py  config.py  database.py  main.py  ws.py
apps/nexus-api/tests/: conftest.py  test_routers.py  test_security.py  test_tenant.py
apps/office-ui/: package.json  tailwind.config.ts  tsconfig.json
apps/office-ui/src/: middleware.ts
apps/workers/: pyproject.toml
apps/workers/autoswarm_workers/: __main__.py  config.py  inference.py  interrupt_handler.py
apps/workers/tests/: test_coding_worktree.py  test_inference_wiring.py  test_research_search.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HITL_FLOW.md  INTEGRATION.md
infra/argocd/: README.md  application.yaml
infra/cloudflare/: dns-records.yaml  tunnel-routes.yaml
infra/docker/: Dockerfile.admin  Dockerfile.colyseus  Dockerfile.gateway  Dockerfile.nexus-api  Dockerfile.office-ui  Dockerfile.workers  docker-compose.dev.yml  docker-compose.yml
infra/k8s/base/: kustomization.yaml  namespace.yaml
infra/k8s/production/: colyseus.yaml  configmap.yaml  kustomization.yaml  nexus-api.yaml  office-ui.yaml  sealed-secret-template.yaml  service-account.yaml
scripts/: generate-assets.js  seed-agents.py  setup.sh
tests/: conftest.py
(+72 files in other folders)
